fixed some problems

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ github:
   zip_url: https://github.com/ryantsui1109/Easy_ADB_fastboot/releases/latest/download/Easy.ADB.and.fastboot-win.zip
   tar_url: https://github.com/ryantsui1109/Easy_ADB_fastboot/releases/latest/download/easy_adb_fastboot-linux.tar.gz
   repository_url: https://github.com/ryantsui1109/Easy_ADB_fastboot
+  repository_nwo: ryantsui1109/Easy_ADB_fastboot
